@@ -1,9 +1,13 @@
 
+2020-11-25  Ron Norman <rjn@inglenet.com>
+
+	* codegen.c: Additional work to enhance INITIALIZE
+
 2020-11-23  Ron Norman <rjn@inglenet.com>
 
 	* codegen.c: Generated code for INITIALIZE enhanced to emit progressive
 			'memcpy' to speed up the process
-			If size is not know until run time then emit call to
+			If size is not known until run time then emit call to
 			cob_init_table
 
 2020-11-18  Ron Norman <rjn@inglenet.com>
